# NeMo-RL

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  codecov.yml  default_runtime_env.yaml  pyproject.toml  pyrefly.toml  ray.sub  run_grpo_vf.py  run_sft.py  test_beam_smoke.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/test-template/: action.yml
.github/workflows/: build-test-publish-wheel.yml  cicd-main.yml  release-freeze.yml  release.yaml
docker/: Dockerfile  Dockerfile.ngc_pytorch
docs/: README_OLD.md  index.md  project.json
docs/design-docs/: sequence-packing-and-dynamic-batching.md
docs/guides/: torch-nightly.md
env_api/vf_exts/: pyproject.toml
env_api/vf_exts/vf_exts/: __init__.py
env_api/vf_exts/vf_exts/env/: grouped_env.py  mt_env_group.py  proximal_docker.py
env_api/vf_exts/vf_exts/rubric/: __init__.py  btrm_judge.py  grouped_rubric.py
examples/: run_dpo.py  run_grpo_math.py  run_grpo_vf.py  run_rm.py  run_sft.py
examples/configs/: grpo_parameter_spreads_example.yaml  grpo_vf_alphabet_3B.yaml  grpo_vf_grouped_500M.yaml  grpo_vf_multigroup_4B.yaml  grpo_vf_pairwise_4B_big.yaml  grpo_vf_policy_judge_4B.yaml  grpo_vf_reverser_1B.yaml  grpo_vf_reverser_30BA3B_ep.yaml  grpo_vf_reverser_600M.yaml  grpo_vf_reverser_600M_dtv2.yaml  grpo_vf_reverser_600M_newvllm.yaml  grpo_vf_reverser_8B_dtv2.yaml  grpo_vf_smolagents_3B.yaml  grpo_vf_smolagents_4B.yaml  grpo_vf_smolagents_600M.yaml  grpo_vf_tooltest_4B.yaml  grpo_vf_tooltest_4B_newvllm.yaml  grpo_vf_tooltest_600M.yaml  pocket-AFM-RL-v0.1.1.yaml
examples/configs/old/: dpo.yaml  rm.yaml  sft.yaml
examples/configs/sft/: afm_pocket_sft.yaml  afmoe_nano.yaml  afmoe_nano_2gpu.yaml  afmoe_nano_2gpu_new.yaml  qwen3_0.6B_2gpu.yaml  qwen3_0.6b_2gpu.yaml  trinity_nano_2gpu.yaml
examples/converters/: convert_dcp_to_hf.py
examples/helpers/pocketReward/: pocketReward.py  pyproject.toml
examples/torchtitan_tests/: llama3_compare.py  qwen3_compare.py  qwen3moe_compare.py
examples/vf-envs/vf_basicqa/: pyproject.toml  vf_basicqa.py
examples/vf-envs/vf_codestd/: pyproject.toml  vf_codestd.py
examples/vf-envs/vf_grouped/: pyproject.toml  vf_grouped.py
examples/vf-envs/vf_gsm8k/: pyproject.toml  vf_gsm8k.py
examples/vf-envs/vf_ifbench/: ifbench.py  pyproject.toml
examples/vf-envs/vf_ifeval/: pyproject.toml  vf_ifeval.py
examples/vf-envs/vf_ifeval/ifeval_utils/: ifeval_rubric.py  ifeval_singleturn.py
examples/vf-envs/vf_multigroup_test/: pyproject.toml  vf_multigroup_test.py
examples/vf-envs/vf_pairwise_judge/: pyproject.toml  vf_pairwise_judge.py
examples/vf-envs/vf_policy_judge/: pyproject.toml  vf_policy_judge.py
examples/vf-envs/vf_smolagents_math_tools/: vf_smolagents_math_tools.py
examples/vf-envs/vf_tool_test/: pyproject.toml  vf_tool_test.py
examples/vf_envs/: reversing_env.py
nemo_rl/: __init__.py  package_info.py
nemo_rl/algorithms/: dpo.py  grpo.py  rm.py  sft.py  utils.py
nemo_rl/config/: __init__.py  checkpointing.py  cluster.py  data.py  dpo.py  logging.py  rm.py  sft.py
nemo_rl/config/rl/: __init__.py  grpo.py  loss.py
nemo_rl/data/: __init__.py  datasets.py  processors.py
nemo_rl/data/hf_datasets/: __init__.py  sharegpt_preference.py
nemo_rl/distributed/: batched_data_dict.py  ray_actor_environment_registry.py  virtual_cluster.py
nemo_rl/environments/: rollouts.py  vf_environment.py
nemo_rl/environments/verifiers/: alphabet_env.py  reversing_env.py
nemo_rl/environments/vf/: environment_wrapper.py
nemo_rl/evals/: eval.py
nemo_rl/execution/: __init__.py  docker_sandbox_pool.py  events.py  opencode_client.py  reward.py  sandbox_backends.py  tracing.py
nemo_rl/experience/: rollouts.py  vf_rollouts.py
nemo_rl/utils/: checkpoint.py  logger.py
nemo_rl/vllm_comms/: __init__.py  pynccl.py  pynccl_wrapper.py  stateless_pg.py  utils.py
rlkit/: __init__.py  package_info.py
rlkit/algorithms/: __init__.py  base_trainer.py  dpo.py  grpo.py  interfaces.py  loss_functions.py  rm.py  sft.py  utils.py
rlkit/config/: __init__.py  base.py  checkpointing.py  cluster.py  data.py  dpo.py  logging.py  rl.py  rm.py  sft.py
rlkit/data/: __init__.py  datasets.py  interfaces.py  llm_message_utils.py  messages.py  sequence_packing.py  sft_datasets.py
rlkit/distributed/: __init__.py  batched_data_dict.py  collectives.py  model_utils.py  named_sharding.py  ray_actor_environment_registry.py  virtual_cluster.py  worker_group_utils.py  worker_groups.py
rlkit/environments/: interfaces.py  rollouts.py  vf_environment.py
rlkit/inference/: __init__.py  vllm_http.py  vllm_http_generation.py  worker_ext.py
rlkit/models/: __init__.py  attention.py  convert.py  expert_parallel.py  moe_indices.py  parallelize.py  state_dict_adapter.py  utils.py
rlkit/training/: lm_policy.py  utils.py  v2_policy_worker.py
rlkit/utils/: checkpoint.py  config.py  flops_tracker.py  logger.py  native_checkpoint.py  nsys.py  nvml.py  prefetch_venvs.py  timer.py  venvs.py
tests/: README.md  sequence_packing.py
tests/docs/: Docs_Tests.sh
tests/functional/: L1_Functional_Tests_GPU.sh  dpo.sh  rm.sh  sft.sh
tests/test_suites/: nightly.txt  release.txt
tests/unit/: L0_Unit_Tests_Generation.sh  L0_Unit_Tests_Other.sh  L0_Unit_Tests_Policy.sh  conftest.py  prepare_unit_test_assets.py  test_config_validation.py  test_meta.py  test_nsight_patching.py  test_recipes_and_test_suites.py  test_utils.py
tools/: __init__.py  autoformat.sh  build-custom-vllm.sh  build-vllm-wheel.sh  build-vllm-with-nightly.sh  code_snapshot.sh  compare_custom_impl.py  convert_checkpoint.py  copyright.sh  eliminate_torch_deps.py  eval_openrouter.py  launch  prep_base_env_for_nightly.sh  prep_trainer_env_for_nightly.sh  preprocess_dataset.py  setup-nightly-torch.sh  setup-torch-2.9-wheel.sh  setup-torch-2.9.sh
tools/model_diagnostics/: 3.check_hf_model_embeddings_untrained.py
tools/vllm_patcher/: patch_vllm.sh
vf_exts/: pyproject.toml
vf_exts/vf_exts/: __init__.py  package_info.py
vf_exts/vf_exts/env/: __init__.py  mt_env_group.py
vf_exts/vf_exts/rubric/: __init__.py  btrm_judge.py
(+197 files in other folders)
