[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rlkit"]

[tool.setuptools.dynamic]
version = {attr = "rlkit.__version__"}  # any module attribute compatible with ast.literal_eval
readme = {file = "README.md", content-type = "text/markdown"}

[project]
name = "rlkit"
dynamic = [
    "version",
    "readme",
]
description = "RLKit: A Scalable and Efficient Post-Training Library for Models Ranging from 1 GPU to 1000s, and from Tiny to >100B Parameters"
requires-python = ">=3.12"
license = {text = "Apache 2.0"}
dependencies = [
    "setuptools",
    "ninja", # for flash-attn parallel build
    "torch==2.7.1",
    "triton",
    "colored==2.2.3",
    "ray[default]==2.48.0",
    # transformers==4.54.0/4.54.1 both fail on rm models
    # Remove this once https://github.com/NVIDIA-NeMo/RL/issues/811 resolved
    "transformers>=4.51.0",
    "wandb",
    "numpy",
    "datasets>=4.0.0",
    "rich",
    "math-verify",
    "accelerate>=0.26",
    "tensorboard",
    "omegaconf",
    "torchdata",
    "nvidia-ml-py",
    "hydra-core",
    "tiktoken",
    "blobfile",
    "debugpy",
    "nvtx",
    "matplotlib",
    "plotly",
    "mlflow",
    "verifiers==0.1.3",
    "vf-exts",
    "flash-attn==2.7.4.post1",
    "vllm>=0.10.0",
    "dion @ https://github.com/microsoft/dion.git",
    "liger-kernel>=0.6.2",
]

[project.optional-dependencies]
# Currently unused, but after https://github.com/NVIDIA-NeMo/RL/issues/501 is resolved, we should use this for the "BASE" PYEXECUTABLE
automodel = [
    # Flash-attn version should be selected to satisfy both TE + vLLM requirements (xformers in particular)
    # https://github.com/NVIDIA/TransformerEngine/blob/v2.3/transformer_engine/pytorch/attention/dot_product_attention/utils.py#L108
    # https://github.com/facebookresearch/xformers/blob/8354497deb2c04c67fbb2e2ad911e86530da0e90/xformers/ops/fmha/flash.py#L76
    "flash-attn==2.7.4.post1",
    "mamba-ssm",
    "causal-conv1d",
]
vllm = [
    "vllm==0.10.0",
    # Remove this once https://github.com/NVIDIA-NeMo/RL/issues/501 resolved
    "flash-attn==2.7.4.post1",
    # Remove this once https://github.com/NVIDIA-NeMo/RL/issues/501 resolved
    "mamba-ssm",
    # Remove this once https://github.com/NVIDIA-NeMo/RL/issues/501 resolved
    "causal-conv1d"
]
# For the vllm_http backend, we use the latest vllm
vllm-http = [
    "vllm==0.10.1.1",
    "hf-transfer",
    "flash-attn==2.7.4.post1"
]
[dependency-groups]

# This is a default group so that we install these even with bare `uv sync`
build = [
    # Build requirement for TE
    "torch==2.7.1",
    # Build requirement for TE
    "setuptools",
    "packaging",
    "einops",
    # Build requirement for nemo_run
    "hatchling",
    "pybind11",
    # Build requirement for flash-attn
    "psutil",
]
docs = [
    "sphinx",
    "sphinx-autobuild",  # For live doc serving while editing docs
    "sphinx-autodoc2",  # For documenting Python API
    "sphinx-copybutton",  # Adds a copy button for code blocks
    "myst_parser",  # For our markdown docs
    "nvidia-sphinx-theme",  # Our NVIDIA theme
]
dev = [
    "pre-commit==3.6.0",
    "ruff==0.9.9",
    "types-PyYAML",
    "types-requests",
    "pyrefly==0.24.2",
]
test = [
    "pytest>=7.0.0",
    "pytest-timeout",
    "pytest-cov",
    "pytest-asyncio",
]

[tool.uv.sources]
# torch/torchvision/triton all come from the torch index in order to pick up aarch64 wheels
torch = [
  { index = "pytorch-cu128" },
]
torchvision = [
  { index = "pytorch-cu128" },
]
triton = [
  { index = "pytorch-cu128" },
]
causal-conv1d = { git = "https://github.com/Dao-AILab/causal-conv1d", tag = "v1.5.0.post8" }
mamba-ssm = { git = "https://github.com/state-spaces/mamba.git", rev = "2e16fc3062cdcd4ebef27a9aa4442676e1c7edf4" }
vf-exts = { workspace = true }

[tool.uv.workspace]
members = [
    "env_api/vf_exts",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
no-build-isolation-package = ["transformer-engine-torch", "transformer-engine", "flash-attn", "mamba-ssm", "causal-conv1d"]
# Always apply the build group since dependencies like TE require build dependencies
# and this lets us assume they are implicitly installed with a simply `uv sync`. Ideally, we'd
# avoid including these in the default dependency set, but for now it's required.
default-groups = ["dev", "build"]
# Users may use different link-modes depending on their scenario:
#  --link-mode=hardlink (default on linux; may get warnings about switching to --link-mode copy if uv cache and venv on different file-systems)
#  --link-mode=copy (slower but more reliable; supresses warning)
#  --link-mode=symlink (fastest option when uv cache and venv on different file-system; caveat: venv is brittle since it depends on the environment/container)
link-mode = "copy"
# Prevent using both vLLM and vLLM-http backends in the same venv
conflicts = [
  [
    { extra = "vllm" },
    { extra = "vllm_http" },
  ],
]

# Needed when building from source
[[tool.uv.dependency-metadata]]
name = "flash-attn"
requires-dist = ["torch", "einops", "setuptools", "psutil", "ninja"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
)/
'''

[tool.pytest.ini_options]
addopts = "--durations=15 -s -rA -x"
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "hf_gated: marks tests that require HuggingFace token access for gated models",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]

[tool.coverage.run]
concurrency = ["thread", "multiprocessing"]
omit = ["/tmp/*"]

[tool.coverage.paths]
source = ["rlkit/", "/opt/rlkit/rlkit/"]

[tool.ruff.lint]
# Enable all `pydocstyle` rules, limiting to those that adhere to the
# Google convention via `convention = "google"`, below.
select = ["D", "F"]

# - On top of the Google convention, disable `D417`, which requires
#   documentation for every function parameter.
# - F841: local variable assigned but never used (exluced to favor readability)
# TODO: Remove D10 once we are about to release to get all the docstrings written
ignore = ["D417", "D10", "F841"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# Section to exclude errors for different file types
[tool.ruff.per-file-ignores]
# Ignore all directories named `tests`.
"tests/**" = ["D"]
# Ignore all files that end in `_test.py`.
"*_test.py" = ["D"]
# Ignore F401 (import but unused) in __init__.py
"__init__.py" = ["F401"]
