[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rlkit"]

[tool.setuptools.dynamic]
version = {attr = "rlkit.__version__"}  # any module attribute compatible with ast.literal_eval
readme = {file = "README.md", content-type = "text/markdown"}

[project]
name = "rlkit"
dynamic = [
    "version",
    "readme",
]
description = "RLKit: A Scalable and Efficient Post-Training Library for Models Ranging from 1 GPU to 1000s, and from Tiny to >100B Parameters"
requires-python = ">=3.13"
license = {text = "Apache 2.0"}
dependencies = [
    "setuptools",
    "ninja", # for flash-attn parallel build
    "torch==2.9.0",
    "triton",
    "colored==2.2.3",
    "ray[default]==2.52.1",
    "transformers>=4.51.0",
    "wandb",
    "numpy",
    "datasets>=4.0.0",
    "rich",
    "math-verify",
    "accelerate>=0.26",
    "tensorboard",
    "torchdata",
    "nvidia-ml-py",
    "hydra-core",
    "tiktoken",
    "blobfile",
    "debugpy",
    "nvtx",
    "matplotlib",
    "plotly",
    "mlflow",
    "verifiers==0.1.8.post1",
    "flash-attn==2.8.3",
    "vllm==0.12.0",
    "torchao",
    "dion @ https://github.com/samsja/dion.git",
    "cut-cross-entropy @ git+https://github.com/apple/ml-cross-entropy.git",
    "vf_exts",
    "pydantic>=2.12.5",
]

[tool.uv.sources]
vf_exts = { path = "vf_exts", editable = true }

[dependency-groups]
test = [
    "pytest>=8.4.2",
    "pytest-timeout",
    "pytest-cov",
    "pytest-asyncio",
]
lint = [
  "ruff",
  "pyrefly"
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
default-groups = ["test", "lint"]
# This makes running multiple machines from the same shared venv a bit easier.
link-mode = "copy"

[tool.pytest.ini_options]
addopts = "--durations=15 -s -rA -x"
testpaths = ["tests"]
python_files = "*.py"

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]

[tool.coverage.run]
concurrency = ["thread", "multiprocessing"]
omit = ["/tmp/*"]

[tool.ruff]
line-length = 140
extend-safe-fixes = ["W293"]

[tool.ruff.lint]
# Enable all `pydocstyle` rules, limiting to those that adhere to the
# Google convention via `convention = "google"`, below.
select = ["D", "F", "E", "W"]

# Ignore all lint errors in the examples directory
exclude = ["examples/**/*.py"]

[tool.ruff.lint.pydocstyle]
convention = "google"
