[project]
name = "vf-exts"
dynamic = ["version"]
description = "Verifiers environment extensions for advanced behavior"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache 2.0"}
dependencies = [
    "verifiers",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["vf_exts", "vf_exts.env"]

[tool.setuptools.dynamic]
version = {attr = "vf_exts.__version__"}