[project]
name = "vf-gsm8k"
version = "0.1.0"
description = "GSM8K environment"
tags = ["gsm8k", "single-turn", "math", "train"]
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.2.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["vf_gsm8k.py"]
