[project]
name = "ifbench"
version = "0.1.1"
tags = ["instruction-following", "eval", "verification", "constraints", "single-turn"]
license = "Apache-2.0"
description = "IFBench evaluation environment for precise instruction following with verifiable constraints"
dependencies = [
    "verifiers>=0.1.2.post1",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["ifbench.py"]

