[project]
name = "vf-ifeval"
description = "IFEval single-turn chat environment using RLVR-IFeval with JSON constraint rewards. Heavily inspired by and incorporates a lot of Allen AI's RLVR code."
tags = ["ifeval", "single-turn", "rlvr", "chat", "constraints", "none-reasoning", "train", "eval"]
version = "0.1.0"
dependencies = [
    "verifiers>=0.1.2",
    "langdetect",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["vf_ifeval.py", "ifeval_utils/ifeval_singleturn.py", "ifeval_utils/ifeval_rubric.py"]