[project]
name = "vf-multigroup-test"
version = "0.1.1"
tags = ["text", "transformation", "single-turn", "xml"]
license = "Apache-2.0"
description = "Test multi-turn EnvGroup"
dependencies = [
    "verifiers>=0.1.2",
    "vf-exts",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["vf_multigroup_test.py"]
