[project]
name = "vf-pairwise-judge"
version = "0.1.0"
tags = ["text", "transformation", "single-turn", "xml"]
license = "Apache-2.0"
description = "Test pairwise judge rubric"
dependencies = [
    "verifiers>=0.1.2",
    "vf-exts",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["vf_pairwise_judge.py"]
